implement editable text elements

--- a/template.html
+++ b/template.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Gabirel Coté</title>
+  <title>Template</title>
   <meta name="description" content="Character sheet">
   <meta name="author" content="velxundussa">
 
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+    <p>Name: <span class="editable">Template</span></p>
   <table>
     <tr>
       <td colspan="3" align="center">
