Add blank Talent/Skill/Attribute

--- a/template.html
+++ b/template.html
@@ -76,6 +76,7 @@
           <li>Leadership <span class="Stat">0</span></li>
           <li>Streetwise <span class="Stat">0</span></li>
           <li>Subterfuge <span class="Stat">0</span></li>
+          <li><span class="editable">__________</span> <span class="Stat">0</span></li>
         </ul>
       </td>
       <td>
@@ -91,6 +92,7 @@
           <li>Stealth <span class="Stat">0</span></li>
           <li>Survival <span class="Stat">0</span></li>
           <li>Technology <span class="Stat">0</span></li>
+          <li><span class="editable">__________</span> <span class="Stat">0</span></li>
         </ul>
       </td>
       <td>
@@ -106,6 +108,7 @@
           <li>Occult <span class="Stat">0</span></li>
           <li>Politics <span class="Stat">0</span></li>
           <li>Science <span class="Stat">0</span></li>
+          <li><span class="editable">__________</span> <span class="Stat">0</span></li>
         </ul>
       </td>
     </tr>
