Enable specialities/Background customisations

--- a/template.html
+++ b/template.html
@@ -34,23 +34,23 @@
     <tr id="Attributes">
       <td>
         <ul>
-          <li>Strength <span class="Stat">1</span></li>
-          <li>Dexterity <span class="Stat">1</span></li>
-          <li>Stamina <span class="Stat">1</span></li>
+          <li><span class="editable">Strength</span> <span class="Stat">1</span></li>
+          <li><span class="editable">Dexterity</span> <span class="Stat">1</span></li>
+          <li><span class="editable">Stamina</span> <span class="Stat">1</span></li>
         </ul>
       </td>
       <td>
         <ul>
-          <li>Charisma <span class="Stat">1</span></li>
-          <li>Manipulation <span class="Stat">1</span></li>
-          <li>Appearance <span class="Stat">1</span></li>
+          <li><span class="editable">Charisma</span> <span class="Stat">1</span></li>
+          <li><span class="editable">Manipulation</span> <span class="Stat">1</span></li>
+          <li><span class="editable">Appearance</span> <span class="Stat">1</span></li>
         </ul>
       </td>
       <td>
         <ul>
-          <li>Perception <span class="Stat">1</span></li>
-          <li>Intelligence <span class="Stat">1</span></li>
-          <li>Wits <span class="Stat">1</span></li>
+          <li><span class="editable">Perception</span> <span class="Stat">1</span></li>
+          <li><span class="editable">Intelligence</span> <span class="Stat">1</span></li>
+          <li><span class="editable">Wits</span> <span class="Stat">1</span></li>
         </ul>
       </td>
     </tr>
@@ -65,49 +65,49 @@
     <tr id="Abilities">
       <td>
         <ul>
-          <li>Alertness <span class="Stat">0</span></li>
-          <li>Art <span class="Stat">0</span></li>
-          <li>Athletics <span class="Stat">0</span></li>
-          <li>Awareness <span class="Stat">0</span></li>
-          <li>Brawl <span class="Stat">0</span></li>
-          <li>Empathy <span class="Stat">0</span></li>
-          <li>Expression <span class="Stat">0</span></li>
-          <li>Intimidation <span class="Stat">0</span></li>
-          <li>Leadership <span class="Stat">0</span></li>
-          <li>Streetwise <span class="Stat">0</span></li>
-          <li>Subterfuge <span class="Stat">0</span></li>
+          <li><span class="editable">Alertness</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Art</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Athletics</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Awareness</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Brawl</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Empathy</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Expression</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Intimidation</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Leadership</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Streetwise</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Subterfuge</span> <span class="Stat">0</span></li>
           <li><span class="editable">__________</span> <span class="Stat">0</span></li>
         </ul>
       </td>
       <td>
         <ul>
-          <li>Crafts <span class="Stat">0</span></li>
-          <li>Drive <span class="Stat">0</span></li>
-          <li>Etiquette <span class="Stat">0</span></li>
-          <li>Firearms <span class="Stat">0</span></li>
-          <li>Martial Arts <span class="Stat">0</span></li>
-          <li>Meditation <span class="Stat">0</span></li>
-          <li>Melee <span class="Stat">0</span></li>
-          <li>Research <span class="Stat">0</span></li>
-          <li>Stealth <span class="Stat">0</span></li>
-          <li>Survival <span class="Stat">0</span></li>
-          <li>Technology <span class="Stat">0</span></li>
+          <li><span class="editable">Crafts</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Drive</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Etiquette</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Firearms</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Martial Arts</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Meditation</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Melee</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Research</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Stealth</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Survival</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Technology</span> <span class="Stat">0</span></li>
           <li><span class="editable">__________</span> <span class="Stat">0</span></li>
         </ul>
       </td>
       <td>
         <ul>
-          <li>Academics <span class="Stat">0</span></li>
-          <li>Computer <span class="Stat">0</span></li>
-          <li>Cosmology <span class="Stat">0</span></li>
-          <li>Enigma <span class="Stat">0</span></li>
-          <li>Esoterica <span class="Stat">0</span></li>
-          <li>Investigation <span class="Stat">0</span></li>
-          <li>Law <span class="Stat">0</span></li>
-          <li>Medicine <span class="Stat">0</span></li>
-          <li>Occult <span class="Stat">0</span></li>
-          <li>Politics <span class="Stat">0</span></li>
-          <li>Science <span class="Stat">0</span></li>
+          <li><span class="editable">Academics</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Computer</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Cosmology</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Enigma</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Esoterica</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Investigation</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Law</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Medicine</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Occult</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Politics</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Science</span> <span class="Stat">0</span></li>
           <li><span class="editable">__________</span> <span class="Stat">0</span></li>
         </ul>
       </td>
@@ -118,23 +118,23 @@
     <tr>
       <td>
         <ul>
-          <li>Correspondence <span class="Stat">0</span></li>
-          <li>Entropy <span class="Stat">0</span></li>
-          <li>Forces <span class="Stat">0</span></li>
+          <li><span class="editable">Correspondence</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Entropy</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Forces</span> <span class="Stat">0</span></li>
         </ul>
       </td>
       <td>
         <ul>
-          <li>Life <span class="Stat">0</span></li>
-          <li>Matter <span class="Stat">0</span></li>
-          <li>Mind <span class="Stat">0</span></li>
+          <li><span class="editable">Life</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Matter</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Mind</span> <span class="Stat">0</span></li>
         </ul>
       </td>
       <td>
         <ul>
-          <li>Prime <span class="Stat">0</span></li>
-          <li>Spirit <span class="Stat">0</span></li>
-          <li>Time <span class="Stat">0</span></li>
+          <li><span class="editable">Prime</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Spirit</span> <span class="Stat">0</span></li>
+          <li><span class="editable">Time</span> <span class="Stat">0</span></li>
         </ul>
       </td>
     </tr>
@@ -146,12 +146,12 @@
     <tr>
       <td>
         <ul>
-          <li>__ <span class="Stat">0</span></li>
-          <li>__ <span class="Stat">0</span></li>
-          <li>__ <span class="Stat">0</span></li>
-          <li>__ <span class="Stat">0</span></li>
-          <li>__ <span class="Stat">0</span></li>
-          <li>__ <span class="Stat">0</span></li>
+            <li><span class="editable">__________</span> <span class="Stat">0</span></li>
+            <li><span class="editable">__________</span> <span class="Stat">0</span></li>
+            <li><span class="editable">__________</span> <span class="Stat">0</span></li>
+            <li><span class="editable">__________</span> <span class="Stat">0</span></li>
+            <li><span class="editable">__________</span> <span class="Stat">0</span></li>
+            <li><span class="editable">__________</span> <span class="Stat">0</span></li>
         </ul>
       </td>
       <td valign="top" align="center">
