--- a/template.html
+++ b/template.html
@@ -20,7 +20,8 @@
 </head>
 
 <body>
-    <p>Name: <span class="editable">Template</span></p>
+    <button id="downloadChar">Save</button>
+    <p>Name: <span class="editable" id="charName">Template</span></p>
     <table>
         <tr>
             <td colspan="3" align="center">
@@ -175,6 +176,5 @@
             </td>
         </tr>
     </table>
-    <pre class="miscData">Nullam eu ante vel est convallis dignissim.  Fusce suscipit, wisi nec facilisis facilisis, est dui fermentum leo, quis tempor ligula erat quis odio.  Nunc porta vulputate tellus.  Nunc rutrum turpis sed pede.  Sed bibendum.  Aliquam posuere.  Nunc aliquet, augue nec adipiscing interdum, lacus tellus malesuada massa, quis varius mi purus non odio.  Pellentesque condimentum, magna ut suscipit hendrerit, ipsum augue ornare nulla, non luctus diam neque sit amet urna.  Curabitur vulputate vestibulum lorem.  Fusce sagittis, libero non molestie mollis, magna orci ultrices dolor, at vulputate neque nulla lacinia eros.  Sed id ligula quis est convallis tempor.  Curabitur lacinia pulvinar nibh.  Nam a sapien.
-</pre>
+    <pre class="miscData">Enter Side content here</pre>
 </html>
