--- a/template - Mage.html
+++ b/template - Mage.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="css/styles.css">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="js/jquery-2.2.4.js"></script>
     <script src="js/script.js"></script>
 
     <!--[if lt IE 9]>
