Add Solar Template

--- a/template - Solar 2nd Ed.html
+++ b/template - Solar 2nd Ed.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Template</title>
+    <title>Template - Solar</title>
     <meta name="description" content="Character sheet">
     <meta name="author" content="velxundussa">
 
@@ -21,7 +21,7 @@
 
 <body>
     <button id="downloadChar">Save</button>
-    <p>Name: <span class="editable" id="charName">Template</span></p>
+    <p>Name: <span class="editable" id="charName">Template - Solar</span></p>
     <table class="mainTable">
         <tr>
             <td colspan="3" align="center">
@@ -60,89 +60,78 @@
             <h1>Abilities</h1>
         </td>
         <tr>
-            <th>Talents</th>
-            <th>Skills</th>
-            <th>Knowledges</th>
+            <th>Dawn</th>
+            <th>Zenith</th>
+            <th>Twilight</th>
         </tr>
-        <tr id="Abilities">
+        <tr>
             <td>
                 <ul>
-                    <li><span class="editable">Alertness</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Art</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Athletics</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Awareness</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Brawl</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Empathy</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Expression</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Intimidation</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Leadership</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Streetwise</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Subterfuge</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">__________</span> <span class="Stat">0</span></li>
-                </ul>
-            </td>
-            <td>
-                <ul>
-                    <li><span class="editable">Crafts</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Drive</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Etiquette</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Firearms</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">Archery</span> <span class="Stat">0</span></li>
                     <li><span class="editable">Martial Arts</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Meditation</span> <span class="Stat">0</span></li>
                     <li><span class="editable">Melee</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Research</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Stealth</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Survival</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Technology</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">__________</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">Thrown</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">War</span> <span class="Stat">0</span></li>
                 </ul>
             </td>
             <td>
                 <ul>
-                    <li><span class="editable">Academics</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Computer</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Cosmology</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Enigma</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Esoterica</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">Integrity</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">Performance</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">Presece</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">Resistance</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">Survival</span> <span class="Stat">0</span></li>
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    <li><span class="editable">Craft</span> <span class="Stat">0</span></li>
                     <li><span class="editable">Investigation</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Law</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">Lore</span> <span class="Stat">0</span></li>
                     <li><span class="editable">Medicine</span> <span class="Stat">0</span></li>
                     <li><span class="editable">Occult</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Politics</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Science</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">__________</span> <span class="Stat">0</span></li>
                 </ul>
             </td>
+            <td>
+            </td>
         </tr>
-        <td colspan="3" align="center">
-            <h1>Spheres</h1>
-        </td>
+        <tr>
+            <th>Night</th>
+            <th>Eclipse</th>
+            <th>Specialties</th>
+        </tr>
         <tr>
             <td>
                 <ul>
-                    <li><span class="editable">Correspondence</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Entropy</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Forces</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">Athletics</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">Awareness</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">Dodge</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">Larceny</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">Stealth</span> <span class="Stat">0</span></li>
                 </ul>
             </td>
             <td>
                 <ul>
-                    <li><span class="editable">Life</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Matter</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Mind</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">Bureaucracy</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">Linguistics</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">Ride</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">Sail</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">Socialize</span> <span class="Stat">0</span></li>
                 </ul>
             </td>
             <td>
                 <ul>
-                    <li><span class="editable">Prime</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Spirit</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Time</span> <span class="Stat">0</span></li>
-                </ul>
+                    <li><span class="editable">__________</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">__________</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">__________</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">__________</span> <span class="Stat">0</span></li>
+                    <li><span class="editable">__________</span> <span class="Stat">0</span></li>
             </td>
         </tr>
+
         <tr>
             <th>Backgrounds</th>
-            <th>Arete</th>
+            <th>Willpower</th>
             <th>Health</th>
         </tr>
         <tr>
@@ -157,11 +146,39 @@
                 </ul>
             </td>
             <td valign="top" align="center">
-                <span class="Stat10">1</span>
-                <br>
-                <h4>Willpower</h4>
                 <span class="Stat10">1</span><br>
-                <span class="Square10">0</span>
+                <span class="Square10">0</span><br>
+                <h4>Soak</h4><br> B:
+                <span class="editable">____</span> L:<span class="editable">____</span> A:<span class="editable">____</span><br>
+                <h4>Virtues</h4><br>
+                <table>
+                    <tr>
+                        <td>
+                            <ul>
+                                <li>Compassion<br>
+                                    <span class="Stat Virtue">1</span><br>
+                                    <span class="Square Virtue">0</span>
+                                </li>
+                                <li>Temperance<br>
+                                    <span class="Stat Virtue">1</span><br>
+                                    <span class="Square Virtue">0</span>
+                                </li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Conviction<br>
+                                    <span class="Stat Virtue">1</span><br>
+                                    <span class="Square Virtue">0</span>
+                                </li>
+                                <li>Valor<br>
+                                    <span class="Stat Virtue">1</span><br>
+                                    <span class="Square Virtue">0</span>
+                                </li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
             </td>
             <td>
                 <ul>
@@ -177,4 +194,5 @@
         </tr>
     </table>
     <pre class="miscData">Enter Side content here</pre>
+
 </html>
