--- a/template - Solar 2nd Ed.html
+++ b/template - Solar 2nd Ed.html
@@ -144,6 +144,10 @@
                     <li><span class="editable">__________</span> <span class="Stat">0</span></li>
                     <li><span class="editable">__________</span> <span class="Stat">0</span></li>
                 </ul>
+                <h4>Limit Break</h4>
+                <span class="Square10">0</span><br>
+                <h4>Virtue Flaw</h4>
+                <span class="editable">__________</span>
             </td>
             <td valign="top" align="center">
                 <span class="Stat10">1</span><br>
@@ -189,6 +193,13 @@
                     <li>Mauled -2 <span class="health">0</span></li>
                     <li>Crippled -5 <span class="health">0</span></li>
                     <li>Incapacitated <span class="health">0</span></li>
+                </ul>
+                <h4>Essence</h4>
+                <ul>
+                    <li><span class="Stat Virtue">1</span></li>
+                    <li>Personal <span class="editable">___</span> | <span class="editable">___</span></li>
+                    <li>Peripheral <span class="editable">___</span> | <span class="editable">___</span></li>
+                    <li>Commited <span class="editable">___</span></li>
                 </ul>
             </td>
         </tr>
