Add Favorite Ability Support to Solar Sheet

--- a/template - Solar 2nd Ed.html
+++ b/template - Solar 2nd Ed.html
@@ -24,6 +24,9 @@
     <button id="downloadChar">Save</button>
     <p>Name: <span class="editable" id="charName">Template - Solar</span></p>
     <table class="mainTable">
+        <col width="33%">
+        <col width="33%">
+        <col width="33%">
         <tr>
             <td colspan="3" align="center">
                 <h1>Attributes</h1>
@@ -68,29 +71,29 @@
         <tr>
             <td>
                 <ul>
-                    <li><span class="editable">Archery</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Martial Arts</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Melee</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Thrown</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">War</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Archery</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Martial Arts</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Melee</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Thrown</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">War</span> <span class="Stat">0</span></li>
                 </ul>
             </td>
             <td>
                 <ul>
-                    <li><span class="editable">Integrity</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Performance</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Presece</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Resistance</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Survival</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Integrity</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Performance</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Presece</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Resistance</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Survival</span> <span class="Stat">0</span></li>
                 </ul>
             </td>
             <td>
                 <ul>
-                    <li><span class="editable">Craft</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Investigation</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Lore</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Medicine</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Occult</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Craft</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Investigation</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Lore</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Medicine</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Occult</span> <span class="Stat">0</span></li>
                 </ul>
             </td>
             <td>
@@ -104,29 +107,29 @@
         <tr>
             <td>
                 <ul>
-                    <li><span class="editable">Athletics</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Awareness</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Dodge</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Larceny</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Stealth</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Athletics</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Awareness</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Dodge</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Larceny</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Stealth</span> <span class="Stat">0</span></li>
                 </ul>
             </td>
             <td>
                 <ul>
-                    <li><span class="editable">Bureaucracy</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Linguistics</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Ride</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Sail</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">Socialize</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Bureaucracy</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Linguistics</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Ride</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Sail</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Socialize</span> <span class="Stat">0</span></li>
                 </ul>
             </td>
             <td>
                 <ul>
-                    <li><span class="editable">__________</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">__________</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">__________</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">__________</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">__________</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">__________</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">__________</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">__________</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">__________</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">__________</span> <span class="Stat">0</span></li>
             </td>
         </tr>
 
@@ -138,12 +141,12 @@
         <tr>
             <td>
                 <ul>
-                    <li><span class="editable">__________</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">__________</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">__________</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">__________</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">__________</span> <span class="Stat">0</span></li>
-                    <li><span class="editable">__________</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">__________</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">__________</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">__________</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">__________</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">__________</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">__________</span> <span class="Stat">0</span></li>
                 </ul>
                 <h4>Limit Break</h4>
                 <span class="Square10">0</span><br>
