Updates Exalted Health track for more than one column of HP

--- a/template - Solar 2nd Ed.html
+++ b/template - Solar 2nd Ed.html
@@ -190,13 +190,12 @@
             </td>
             <td>
                 <ul>
-                    <li>Bruised -0 <span class="health">0</span></li>
-                    <li>Hurt -1 <span class="health">0</span></li>
-                    <li>Injured -1 <span class="health">0</span></li>
-                    <li>Wounded -2 <span class="health">0</span></li>
-                    <li>Mauled -2 <span class="health">0</span></li>
-                    <li>Crippled -5 <span class="health">0</span></li>
-                    <li>Incapacitated <span class="health">0</span></li>
+                    <li>-0 <span class="healthEx">0</span><span class="healthEx">0</span><span class="healthEx">0</span><span class="healthEx">0</span><span class="healthEx">0</span></li>
+                    <li>-1 <span class="healthEx">0</span><span class="healthEx">0</span><span class="healthEx">0</span><span class="healthEx">0</span><span class="healthEx">0</span></li>
+                    <li>-2 <span class="healthEx">0</span><span class="healthEx">0</span><span class="healthEx">0</span><span class="healthEx">0</span><span class="healthEx">0</span></li>
+                    <li>-2 <span class="healthEx">0</span><span class="healthEx">0</span><span class="healthEx">0</span><span class="healthEx">0</span><span class="healthEx">0</span></li>
+                    <li>-4 <span class="healthEx">0</span></li>
+                    <li>Incapacitated <span class="healthEx">0</span></li>
                 </ul>
                 <h4>Essence</h4>
                 <ul>
