Add dragon blood essence calculation support

--- a/template - Dragon Blooded 2nd Ed.html
+++ b/template - Dragon Blooded 2nd Ed.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Template - Solar</title>
+    <title>Template - Dragon Blooded</title>
     <meta name="description" content="Character sheet">
     <meta name="author" content="velxundussa">
 
@@ -13,7 +13,7 @@
 
     <script src="js/jquery-2.2.4.js"></script>
     <script src="js/script.js"></script>
-    <script src="js/solar.js"></script>
+    <script src="js/dragonBlood.js"></script>
 
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -22,7 +22,7 @@
 
 <body>
     <button id="downloadChar">Save</button>
-    <p>Name: <span class="editable" id="charName">Template - Solar</span></p>
+    <p>Name: <span class="editable" id="charName">Template - Dragon Blooded</span></p>
     <table class="mainTable">
         <col width="33%">
         <col width="33%">
