Corrects title and default name on Lunar Sheets

--- a/template - Lunar 2nd Ed.html
+++ b/template - Lunar 2nd Ed.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Template - Solar</title>
+    <title>Template - Lunar</title>
     <meta name="description" content="Character sheet">
     <meta name="author" content="velxundussa">
 
@@ -22,7 +22,7 @@
 
 <body>
     <button id="downloadChar">Save</button>
-    <p>Name: <span class="editable" id="charName">Template - Solar</span></p>
+    <p>Name: <span class="editable" id="charName">Template - Lunar</span></p>
     <table class="mainTable">
         <col width="33%">
         <col width="33%">
