--- a/Exalted 2nd Ed - Dragon Blooded.html
+++ b/Exalted 2nd Ed - Dragon Blooded.html
@@ -75,7 +75,7 @@
                     <li><span class="Favorite">0</span><span class="editable">Lore</span> <span class="Stat">0</span></li>
                     <li><span class="Favorite">0</span><span class="editable">Occult</span> <span class="Stat">0</span></li>
                     <li><span class="Favorite">0</span><span class="editable">Stealth</span> <span class="Stat">0</span></li>
-                    <li><span class="Favorite">0</span><span class="editable">War</span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Throw</span> <span class="Stat">0</span></li>
                 </ul>
             </td>
             <td>
@@ -118,7 +118,7 @@
                 <ul>
                     <li><span class="Favorite">0</span><span class="editable">Archery</span> <span class="Stat">0</span></li>
                     <li><span class="Favorite">0</span><span class="editable">Medicine</span> <span class="Stat">0</span></li>
-                    <li><span class="Favorite">0</span><span class="editable">Performance<span> <span class="Stat">0</span></li>
+                    <li><span class="Favorite">0</span><span class="editable">Performance</span> <span class="Stat">0</span></li>
                     <li><span class="Favorite">0</span><span class="editable">Ride</span> <span class="Stat">0</span></li>
                     <li><span class="Favorite">0</span><span class="editable">Survival</span> <span class="Stat">0</span></li>
                 </ul>
